<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlignmentActivity">

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:text="@string/btnLeft"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCenter"
        app:layout_constraintEnd_toStartOf="@+id/btnCenter" />

    <Button
        android:id="@+id/btnCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="233dp"
        android:text="@string/btnCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/btnRight"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCenter"
        app:layout_constraintStart_toEndOf="@+id/btnCenter" />
</android.support.constraint.ConstraintLayout>